# agent-pi-harness

./: .env.example  .env.sample  .gitignore  .mcp.json  .mcp.json.sandbox  .tool-versions  AGENTS.md  README.md  TOOLS.md  justfile  package-lock.json  package.json  pyproject.toml
.claude/skills/agent-sandboxes/sandbox_cli/: .gitignore  README.md  pyproject.toml
.claude/skills/agent-sandboxes/sandbox_cli/src/: main.py
.claude/skills/agent-sandboxes/sandbox_cli/src/commands/: browser.py  exec.py  files.py  sandbox.py
.claude/skills/agent-sandboxes/sandbox_cli/src/modules/: browser.py  commands.py  files.py  sandbox.py
apps/drive/: .gitignore  fanout.py  logs.py  main.py  poll.py  proc.py  pyproject.toml  runner.py  sentinel.py  session.py
apps/drive/commands/: fanout.py  logs.py  poll.py  proc.py  run.py  send.py  session.py
apps/drive/modules/: errors.py  output.py  proc.py  sentinel.py  tmux.py
apps/sandbox_workflows/: .gitignore  README.md  main.py  pyproject.toml
apps/sandbox_workflows/src/: main.py
apps/sandbox_workflows/src/commands/: sandbox_fork.py
apps/sandbox_workflows/src/modules/: agents.py  constants.py  forks.py  git_utils.py  hooks.py  logs.py
apps/sandbox_workflows/src/prompts/: sandbox_fork_agent_system_prompt.md  sandbox_fork_agent_w_github_token_system_prompt.md
mcp/just-prompt/: .env.sample  .gitignore  .mcp.json  README.md  list_models.py  pyproject.toml
mcp/just-prompt/.claude/: settings.json
mcp/just-prompt/.claude/commands/: context_prime.md  context_prime_eza.md  context_prime_w_lead.md  jprompt_ultra_diff_review.md  project_hello_w_name.md
mcp/just-prompt/ai_docs/: extending_thinking_sonny.md  google-genai-api-update.md  pocket-pick-mcp-server-example.xml
mcp/just-prompt/example_outputs/countdown_component/: countdown_component_groq_qwen-qwq-32b.md  countdown_component_o_gpt-4.5-preview.md  countdown_component_openai_o3-mini.md  countdown_component_q_deepseek-r1-distill-llama-70b-specdec.md  diff.md
mcp/just-prompt/example_outputs/decision_openai_vs_anthropic_vs_google/: ceo_decision.md  ceo_medium_decision_openai_vs_anthropic_vs_google_anthropic_claude-3-7-sonnet-20250219_4k.md  ceo_medium_decision_openai_vs_anthropic_vs_google_gemini_gemini-2.5-flash-preview-04-17.md  ceo_medium_decision_openai_vs_anthropic_vs_google_gemini_gemini-2.5-pro-preview-03-25.md  ceo_medium_decision_openai_vs_anthropic_vs_google_openai_o3_high.md  ceo_medium_decision_openai_vs_anthropic_vs_google_openai_o4-mini_high.md  ceo_prompt.xml
mcp/just-prompt/prompts/: ceo_medium_decision_openai_vs_anthropic_vs_google.txt  ceo_prompt_template.xml  ceo_small_decision_python_vs_typescript.txt  ceo_small_decision_rust_vs_prompt_eng.txt  countdown_component.txt  mock_bin_search.txt  mock_ui_component.txt
mcp/just-prompt/specs/: gemini-2-5-flash-reasoning.md  init-just-prompt.md  new-tool-llm-as-a-ceo.md  oai-reasoning-levels.md  prompt_from_file_to_file_w_context.md
mcp/just-prompt/src/just_prompt/: __init__.py  __main__.py  server.py
mcp/just-prompt/src/just_prompt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mcp/just-prompt/src/just_prompt/atoms/: __init__.py
mcp/just-prompt/src/just_prompt/atoms/llm_providers/: __init__.py  anthropic.py  deepseek.py  gemini.py  groq.py  ollama.py  openai.py
mcp/just-prompt/src/just_prompt/atoms/shared/: __init__.py  data_types.py  model_router.py  utils.py  validator.py
mcp/just-prompt/src/just_prompt/molecules/: __init__.py  ceo_and_board_prompt.py  list_models.py  list_providers.py  prompt.py  prompt_from_file.py  prompt_from_file_to_file.py
mcp/just-prompt/src/just_prompt/tests/: test_server.py
mcp/just-prompt/src/just_prompt/tests/atoms/: __init__.py
mcp/just-prompt/src/just_prompt/tests/molecules/: __init__.py  test_ceo_and_board_prompt.py  test_list_models.py  test_list_providers.py  test_prompt.py  test_prompt_from_file.py  test_prompt_from_file_to_file.py
mcp/just-prompt/ultra_diff_review/: diff_anthropic_claude-3-7-sonnet-20250219_4k.md  diff_gemini_gemini-2.0-flash-thinking-exp.md  diff_openai_o3-mini.md  fusion_ultra_diff_review.md
mcp/pocket-pick/: .gitignore  .mcp.json  README.md  pyproject.toml
mcp/pocket-pick/.claude/commands/: prime.md
mcp/pocket-pick/ai_docs/: mcp-server-git-repomix-output.xml  self-pocket-pick-mcp-server.xml
mcp/pocket-pick/specs/: pocket-pick-v1.md  pocket_list_ids.md  require-id-during-add-feature.md
mcp/pocket-pick/src/mcp_server_pocket_pick/: __init__.py  __main__.py  server.py
mcp/pocket-pick/src/mcp_server_pocket_pick/modules/: __init__.py  constants.py  data_types.py  init_db.py
mcp/pocket-pick/src/mcp_server_pocket_pick/modules/functionality/: __init__.py  add.py  add_file.py  backup.py  find.py  get.py  list.py  (+4 more)
mcp/pocket-pick/src/mcp_server_pocket_pick/tests/: test_init_db.py
(+1325 files in other folders)
