[project]
name = "arhugula"
version = "0.1.0"
description = "Portable Pi-orchestrated agent development environment"
requires-python = ">=3.12,<3.14"
dependencies = [
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
